# lyritty

./: .gitignore  LSYNC.md  README.md  elrc_to_lrc.py  lyritty.py  main.py  pyproject.toml  requirements.txt
songs/: example.lrc
